Fixing form input and button styling on mobile to match desktop

--- a/style.css
+++ b/style.css
@@ -51,6 +51,7 @@ input {
   height: 50px;
   font-size: 1rem;
   border: 1px solid white;
+  border-radius: 0;
 }
 
 input:hover {
@@ -66,6 +67,7 @@ input[type=number]::-webkit-inner-spin-button, input[type=number]::-webkit-outer
   background-color: #248130;
   color: white;
   border: 0;
+  border-radius: 0;
 }
 
 #submitButton:hover {
